[package]
name = "smartctl-wrapper"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
log = "0.4.17"
once_cell = "1.16.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_ignored = "0.1.5"
serde_json = "1.0.87"

[dev-dependencies]
pretty_env_logger = "0.4.0"
